--- a/style.css
+++ b/style.css
@@ -215,6 +215,9 @@ a {
   .hero .content h3 {
     margin: 30px 0;
   }
+  .hero .content .cta {
+    margin-top: 60px;
+  }
 }
 @media screen and (max-width: 767px) {
   .hero {
@@ -227,6 +230,9 @@ a {
   .hero .content {
     width: 100%;
     padding-top: 110px;
+  }
+  .hero .content h3 {
+    font-size: 18px;
   }
 }
 @media screen and (max-width: 380px) {
