--- a/style.css
+++ b/style.css
@@ -216,12 +216,15 @@ a {
     margin: 30px 0;
   }
   .hero .content .cta {
-    margin-top: 60px;
+    margin-top: 40px;
   }
 }
 @media screen and (max-width: 767px) {
   .hero {
     height: 90vh;
+  }
+  .hero .content {
+    padding-top: 90px;
   }
   .ar .hero .content h1,
   .ar .hero .content h1 .change {
