--- a/style.css
+++ b/style.css
@@ -468,6 +468,10 @@ a {
   .video .content {
     padding-top: 150px;
   }
+  .video-play {
+    width: 100%;
+    height: 100%;
+  }
 }
 @media screen and (max-width: 767px) {
   .video .content {
