--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   -o-box-sizing: border-box;
 }
 body {
-  font-family: "sofia-pro", sans-serif;
+  font-family: "sofia-pro", sans-serif !important;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -79,6 +79,7 @@ a {
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
   transition: background-color 200ms linear;
   box-shadow: 0 5px 14px 0 rgb(0 0 0 / 8%);
+  padding: 10px 0;
 }
 .navbar.scrolled a {
   color: var(--second-color);
@@ -103,11 +104,17 @@ a {
   margin-left: auto;
   position: relative;
 }
+.navbar.ar .nav .links {
+  margin-left: 0;
+}
 .nav .links a {
   font-size: 16px;
   padding: 25px 0;
   letter-spacing: 1px;
   outline: none;
+}
+.navbar.ar .nav .links a {
+  letter-spacing: 0;
 }
 .no .nav .links a {
   color: var(--second-color);
@@ -433,6 +440,9 @@ a {
   height: 100vh;
   position: relative;
 }
+.video.ar {
+  text-align: right;
+}
 .video::after {
   content: "";
   position: absolute;
@@ -490,10 +500,13 @@ a {
   position: absolute;
   top: 35%;
   left: 0;
-  background-color: var(--first-color);
+  background-color: var(--third-color);
   width: 20px;
   height: 4px;
   display: block;
+}
+.video.ar .content::before {
+  right: 0;
 }
 @media screen and (max-width: 1199px) {
   .video .content::before {
@@ -524,19 +537,29 @@ a {
 }
 .video .content p {
   font-weight: 600;
-  font-size: 24px;
+  font-size: 18px;
   color: var(--third-color);
   letter-spacing: -0.00291667em;
   line-height: 1.2;
+}
+.video .content p.wid {
+  width: 65%;
 }
 @media screen and (max-width: 1199px) {
   .video .content p {
     font-size: 16px;
   }
+  .video .content p.wid {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 484px) {
   .video .content p {
     font-size: 14px;
+  }
+  .video .content .play {
+    align-items: flex-start;
+    flex-direction: column;
   }
 }
 .video .content .play {
@@ -563,14 +586,36 @@ a {
   border-radius: 100%;
   margin-right: 12px;
 }
+.video.ar .content .play .play-icon {
+  margin-left: 12px;
+}
 .video .content .play p {
   font-size: 16px;
 }
 .video .content .play a {
   text-decoration: none;
-  color: #fff;
-  font-size: 22px;
-  margin-left: 10px;
+  color: var(--first-color);
+  font-size: 18px;
+  margin-left: 20px;
+  background-color: var(--third-color);
+  padding: 10px 30px;
+  transition: all 0.3s ease-in-out;
+}
+.video.ar .content .play a {
+  margin-right: 20px;
+}
+.video .content .play a:hover {
+  opacity: 0.9;
+}
+@media screen and (max-width: 484px) {
+  .video .content .play {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .video .content .play a {
+    margin-left: 0;
+    margin-top: 20px;
+  }
 }
 
 /* Watch */
@@ -667,6 +712,14 @@ a {
   color: var(--third-color);
   font-weight: 400;
 }
+@media screen and (max-width: 767px) {
+  .join {
+    padding: 20px 0;
+  }
+  .join .content h2 {
+    font-size: 26px;
+  }
+}
 
 /* =========================
     =========== WHY =========
@@ -722,6 +775,7 @@ a {
   .why .content,
   .why.us .content {
     grid-template-columns: 1fr;
+    grid-gap: 20px;
   }
 }
 
@@ -877,109 +931,6 @@ a {
   font-weight: 200;
   padding: 10px;
 }
-@media screen and (max-width: 767px) {
-  .ps-timeline-sec .container ol.ps-timeline {
-    margin: 130px 0 !important;
-    border-left: 2px solid var(--first-color);
-    padding-left: 0 !important;
-    padding-top: 120px !important;
-    border-top: 0 !important;
-    margin-left: 25px !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li {
-    height: 220px;
-    float: none !important;
-    width: inherit !important;
-  }
-  .ps-timeline-sec
-    .container
-    ol.ps-timeline
-    li:nth-child(2)
-    .img-handler-bot
-    img {
-    width: 70px;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li:last-child {
-    margin: 0;
-    bottom: 0 !important;
-    height: 120px;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li:last-child .img-handler-bot {
-    bottom: 40px !important;
-    width: 40% !important;
-    margin-left: 25px !important;
-    margin-top: 0 !important;
-  }
-  .ps-timeline-sec
-    .container
-    ol.ps-timeline
-    li:last-child
-    .img-handler-bot
-    img {
-    width: 100%;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li:last-child .ps-top {
-    margin-bottom: 0 !important;
-    top: 20px;
-    width: 50% !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li span {
-    left: 0 !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li span.ps-sp-top:before {
-    content: none !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li span.ps-sp-top:after {
-    content: none !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li span.ps-sp-bot:before {
-    content: none !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li span.ps-sp-bot:after {
-    content: none !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li .img-handler-top {
-    position: absolute !important;
-    bottom: 150px !important;
-    width: 30% !important;
-    float: left !important;
-    margin-left: 35px !important;
-    margin-bottom: 0 !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li .img-handler-top img {
-    margin: 0 auto !important;
-    width: 80% !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li .img-handler-bot {
-    position: absolute !important;
-    bottom: 115px !important;
-    width: 30% !important;
-    float: left !important;
-    margin-left: 35px !important;
-    margin-bottom: 0 !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li p {
-    text-align: left !important;
-    width: 100% !important;
-    margin: 0 auto !important;
-    margin-top: 0px !important;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li .ps-top {
-    width: 60% !important;
-    float: right !important;
-    right: 0;
-    top: -40px;
-  }
-  .ps-timeline-sec .container ol.ps-timeline li .ps-bot {
-    width: 60% !important;
-    float: right !important;
-    right: 0;
-    top: -40px;
-  }
-  .ps-timeline-sec .more h3 {
-    font: 18px;
-  }
-}
 .ps-timeline-sec .container ol.ps-timeline {
   margin: 300px 0 200px;
   padding: 0;
@@ -1064,6 +1015,17 @@ a {
   position: absolute;
   margin-top: 35px;
 }
+.why.us.mob {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .ps-timeline-sec {
+    display: none;
+  }
+  .why.us.mob {
+    display: block;
+  }
+}
 
 /* End New */
 
@@ -1144,6 +1106,7 @@ a {
 .accordion {
   width: 60%;
   margin: 0 auto;
+  font-family: "sofia-pro", sans-serif !important;
 }
 .accordion .accordion-item {
   border-bottom: 1px solid #e5e5e5;
@@ -1164,6 +1127,9 @@ a {
   background: none;
   outline: none;
 }
+.accordion.ar button {
+  text-align: right;
+}
 .accordion button:hover,
 .accordion button:focus {
   cursor: pointer;
@@ -1177,6 +1143,9 @@ a {
 }
 .accordion button .accordion-title {
   padding: 1em 1.5em 1em 0;
+}
+.accordion.ar button .accordion-title {
+  padding: 1em 0 1em 1.5em;
 }
 .accordion button .icon {
   display: inline-block;
@@ -1207,6 +1176,9 @@ a {
   width: 2px;
   height: 10px;
   background: currentColor;
+}
+.accordion.ar button .icon {
+  right: 97%;
 }
 .accordion button[aria-expanded="true"] {
   color: var(--first-color);
@@ -1319,6 +1291,9 @@ a {
   color: #b9b9b9;
   transition: all 0.2s;
 }
+.contact.ar .formbox form .input-box span {
+  right: 20px;
+}
 .formbox form .input-box span.tes {
   top: 30px;
 }
@@ -1378,6 +1353,9 @@ a {
   transition: border 0.25s ease-in-out 0ms;
   color: #7f7f7f;
 }
+.contact.ar .formbox form .policy .checkbox label {
+  padding: 0 35px 0 0;
+}
 .formbox form .policy .checkbox label a {
   color: #7f7f7f;
   text-decoration: underline;
@@ -1395,6 +1373,9 @@ a {
   border-radius: 0;
   background: transparent;
   z-index: 1;
+}
+.contact.ar .formbox form .policy .checkbox .check {
+  right: 0;
 }
 .formbox form .policy .checkbox .check::after {
   content: "";
@@ -1491,6 +1472,51 @@ a {
   line-height: 2;
   -webkit-transition: color 0.3s ease-in-out 0ms;
   transition: color 0.3s ease-in-out 0ms;
+}
+.footer .social,
+.footer .icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.footer .social h4 {
+  color: var(--second-color);
+  font-weight: 700;
+  font-size: 14px;
+  text-transform: uppercase;
+  line-height: 2;
+  letter-spacing: 0.05em;
+}
+.footer .icons {
+  margin-left: 5px;
+}
+.footer .icons a {
+  margin-left: 15px;
+}
+.footer.ar .icons {
+  margin-right: 5px;
+}
+.footer.ar .icons a {
+  margin-left: 15px;
+}
+.footer .icons img {
+  width: 20px;
+  height: auto;
+}
+.footer .bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 30px;
+}
+.footer .bottom p {
+  color: #7f7f7f;
+  font-weight: 700;
+  font-size: 12px;
+  text-transform: uppercase;
+  line-height: 2;
 }
 @media screen and (max-width: 768px) {
   .footer .content {
