--- a/style.css
+++ b/style.css
@@ -1623,6 +1623,7 @@ a {
 }
 .tips-watch .content {
   padding-top: 5%;
+  width: 100%;
 }
 .tips-watch .content::before {
   display: none;
@@ -1633,6 +1634,9 @@ a {
   padding: 50px 0;
   background-color: #f8f9fc;
   position: relative;
+}
+.disting {
+  padding: 50px 0 0;
 }
 .videos .videos-content,
 .disting .content,
@@ -1686,26 +1690,52 @@ a {
   width: 85%;
   margin: 0 auto;
 }
+.tips-tools .content,
+.tips-tools .content .toolys .tooly {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.tips-tools .content .toolys {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: flex-start;
+  grid-gap: 20px;
+  margin-bottom: 20px;
+}
+
 .tips-tools .tooly {
   background-color: var(--third-color);
-  box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important;
-  margin-bottom: 20px;
+  /* box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15) !important; */
 }
 .tips-tools .tooly .info {
   width: 100%;
-  padding: 0 30px;
+  padding: 30px 30px 50px;
 }
+
 .tips-tools .tooly .info .cta {
   margin-top: 40px;
 }
 .tips-tools .tooly .tolly-img {
   width: 100%;
-  height: 500px;
+  height: 100%;
 }
 .tips-tools .tooly .tolly-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.tools-content {
+  height: 285px;
+  width: 100%;
+  padding: 30px;
+  background: linear-gradient(136.49deg, #2d72b9 0%, #2b93b2 100%);
+  color: var(--third-color);
+}
+.tools-content h3 {
+  font-size: 56px;
 }
 .join {
   width: 100%;
@@ -1774,6 +1804,7 @@ a {
   line-height: 60px;
   cursor: pointer;
   transition: all 0.5s;
+  text-align: left;
 }
 .join-select .custom-option:hover {
   cursor: pointer;
@@ -1819,6 +1850,31 @@ a {
 #player .player .vp-title {
   display: none !important;
 }
+.tips-watch .wrap-video {
+  overflow: hidden;
+  background: url("imgs/york-video.png") center center no-repeat;
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  min-width: 100%;
+  min-height: 100%;
+}
+.tips-watch .wrap-video:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+}
+.tips-watch .wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 @media screen and (max-width: 767px) {
   .join .content h3 {
     font-size: 22px;
@@ -1845,11 +1901,11 @@ a {
     width: 100%;
   }
   .tips-tools .tooly .info {
-    text-align: center;
+    text-align: left;
     padding: 20px 10px 30px;
   }
   .tips-tools .tooly .tolly-img {
-    height: 200px;
+    height: auto;
   }
   .join-select .custom-select-wrapper {
     width: 90%;
@@ -1857,12 +1913,36 @@ a {
   }
   .disting .content .info {
     padding: 0 0 50px 0;
-    text-align: center;
+    text-align: left;
   }
   .disting .content .disting-img {
     width: 100%;
   }
   .tips-watch {
     height: 200px;
+  }
+  .tips-watch .content {
+    width: 100%;
+  }
+  .why.tips-us .content {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .why.tips-us .content .cons .img {
+    width: 50px;
+  }
+  .why.tips-us .content .cons .more h3 {
+    font-size: 16px;
+  }
+  .tips-tools .content .toolys {
+    grid-template-columns: 1fr;
+  }
+  .tools-content {
+    height: auto;
+  }
+  .tools-content h3 {
+    font-size: 30px;
+  }
+  .tips-tools .content .toolys div:nth-child(2) .tooly:nth-child(1) {
+    margin-bottom: 20px;
   }
 }
