--- a/style.css
+++ b/style.css
@@ -173,6 +173,9 @@ a {
   margin-top: 20px;
   transition: all 0.3s ease-in-out;
 }
+.ar .nav .links .sub-content {
+  right: 0;
+}
 .nav .links .sub-content .link {
   width: 100%;
 }
